--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,9 @@
     <string name="create_desc">Register Your Account</string>
     <string name="register">REGISTER</string>
     <string name="member">Already a Member? Sign in.</string>
-    <string name="logo_desc">logo</string>>
+    <string name="logo_desc">logo</string>
+    <string name="title_activity_eta">eta</string>
+    <string name="title_activity_bus_et">BusETA</string>
+    <string name="stop_logo">stop logo</string>
+    <string name="stop_address">MAITLAND CENTER PKY AND N KELLER RD</string>>
 </resources>
